--- a/client/package.json
+++ b/client/package.json
@@ -19,11 +19,14 @@
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
     "bootstrap": "^4.6.0",
+    "bootswatch": "^5.2.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^9.0.0",
+    "ngx-spinner": "^15.0.1",
     "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xng-breadcrumb": "^9.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
