--- a/Infrastructure/Infrastructure.csproj
+++ b/Infrastructure/Infrastructure.csproj
@@ -4,10 +4,13 @@
     <ProjectReference Include="..\Core\Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.0" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.0" />
-  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.0" />
+  <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.1" />
+  <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.1" />
+  <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.25.1" />
   <PackageReference Include="StackExchange.Redis" Version="2.6.86" />
+  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.25.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
