--- a/client/angular.json
+++ b/client/angular.json
@@ -84,7 +84,7 @@
               "browserTarget": "client:build:development",
               "sslKey": "ssl/server.key",
               "sslCert": "ssl/server.crt",
-              "ssl": true
+              "ssl": false
             }
           },
           "defaultConfiguration": "development"
